# ECS

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml
docs/: Getting started.md
lib/: CMakeLists.txt
lib/ecs/: CMakeLists.txt  core.cppm  ecs.cppm  registry.cpp
lib/ecs/components/: CMakeLists.txt  engine.cppm  gui.cppm
lib/ecs/systems/: CMakeLists.txt  engine.cppm  gui.cppm  systems.cppm
lib/utils/: CMakeLists.txt  containers.cppm  types.cppm  utilities.cppm  utils.cppm
src/: CMakeLists.txt  core.cpp  core.cppm  ecs.cppm
src/abstractions/: CMakeLists.txt  abstractions.cppm  gui.cppm
src/components/: components.cppm  engine.cppm  gui.cppm
src/implementations/gui/: CMakeLists.txt  SFML.cppm
src/systems/: engine.cppm  gui.cppm  systems.cppm
